--- a/ssh.template
+++ b/ssh.template
@@ -2,11 +2,4 @@ ssh -o "ExitOnForwardFailure yes" -f \
     -R {{ ctl_port }}:localhost:{{ local_port }} \
     -R {{ job_port }}:localhost:{{ fwd_port }} \
     {{ ssh_host }} \
-    "source /etc/profile; module load singularity-3.8.3-gcc-11.2.0-rlxj6fi ; (singularity exec /mnt/beegfs/idevillasante/apps/rocker/images/dev.sif R  --no-save --no-restore -e 'clustermq:::ssh_proxy(ctl={{ ctl_port }}, job={{ job_port }})'> {{ ssh_log | /dev/null }} 2>&1 )"
-    
-    
-    
-    
-    #(singularity exec /mnt/beegfs/idevillasante/apps/rocker/images/dev/ R  --no-save --no-restore -e \
-    #    'clustermq:::ssh_proxy(ctl={{ ctl_port }}, job={{ job_port }})' \
-    #    > {{ ssh_log | /dev/null }} 2>&1 )"
+    "source /etc/profile; source ~/.bashrc;export SINGULARITYENV_RENV_PATHS_LIBRARY=$HOME/Projects/XALD/renv/library/; export SINGULARITYENV_R_LIBS_USER=$HOME/apps/R_Singularity/4.2:$HOME/.cache/R/renv/cache/v5/R-4.2/x86_64-pc-linux-gnu/:$R_LIBS_USER; cd ~/Projects/XALD; module load singularity-3.8.3-gcc-11.2.0-rlxj6fi ; (singularity exec /mnt/beegfs/idevillasante/apps/rocker/images/dev.sif R  --no-save --no-restore -e 'clustermq:::ssh_proxy(ctl={{ ctl_port }}, job={{ job_port }})'> {{ ssh_log | /dev/null }} 2>&1 )"
