--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -11,6 +11,14 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3 
         
+            
+      # add software dependencies here
+      - uses: r-lib/actions/setup-r@v2
+        with:
+          # uses the RStudio Package Manager
+          use-public-rspm: true 
+          r-version: 'renv'
+      
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
         with:
@@ -18,12 +26,7 @@ jobs:
           tinytex: true 
           # uncomment below and fill to pin a version
           # version: 0.9.600
-      
-      # add software dependencies here
-      - uses: r-lib/actions/setup-r@v2
-        with:
-          # uses the RStudio Package Manager
-          use-public-rspm: true 
+
           
       - name: Install curl
         run: sudo apt-get install -y libcurl4-openssl-dev
